# TCP_IP-Socket

./: CMakeLists.txt  README.md
include/: custom_client.h  custom_server.h  custom_socket.h  custom_socket_interface.h  dummy_sock.h
src/: custom_client.cpp  custom_server.cpp  custom_socket.cpp  dummy_sock.cpp
src/tests/: test_client.cpp  test_server.cpp
